tests/compile_fail/state/top_state_state_type_defined.stderr
error: the `TopState::State` associated type must not be manually defined
  --> tests/compile_fail/state/top_state_state_type_defined.rs:13:9
   |
13 |         type State = ();
   |         ^^^^
